<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_login"
                android:title="Iniciar Sesión"/>
        <item
                android:id="@+id/sell_product"
                android:icon="@drawable/ic_menu_store"
                android:title="@string/sell_product"/>

        <item   android:id="@+id/get_at_cover"
                android:icon="@drawable/menu_cover_black"
                android:title="Aparecer en la portada"/>

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_notifications"
                android:icon="@drawable/ic_menu_notifications"
                android:title="Notificaciones"/>

            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>

            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
        </menu>
    </item>

    <item android:title="@string/menu_about">
        <menu>

            <item
                    android:id="@+id/nav_dev"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_dev"/>

        </menu>
    </item>

</menu>
